--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -22,6 +22,7 @@ jobs:
             github.pullRequests.merge({
               owner: context.payload.repository.owner.login,
               repo: context.payload.repository.name,
-              pull_number: context.payload.pull_request.number
+              pull_number: context.payload.pull_request.number,
+              merge_method: 'squash'
             })
           github-token: ${{github.token}}
