--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "scripts": {
     "test": "npm run test:ts && eslint '**/*.ts' && npm run prettier",
-    "test:ts": "karma start karma.conf.js  --single-run",
+    "test:ts": "karma start karma.conf.cjs  --single-run",
     "prettier": "prettier --check '**/*'",
     "preversion": "npm test",
     "banner": "banner-cli index.js",
