--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "strict": false,
+    "target": "ES2020",
+    "module": "esnext",
+    "strict": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
     "esModuleInterop": true,
     "declaration": true,
-    "lib": ["ES5", "dom", "ES2015"]
+    "lib": ["ES2020", "dom"],
+    "moduleResolution": "node"
   }
 }
