Update banner-cli command

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "test:ts": "karma start test/karma.conf.cjs  --single-run",
     "prettier": "prettier --check 'src/**/*'",
     "preversion": "npm test",
-    "banner": "banner-cli index.js",
+    "banner": "banner-cli dist/index.js",
     "build": "tsc",
     "coveralls": "cat .coverage/lcov.info | coveralls"
   },
