--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "types": "index.d.ts",
   "repository": "mkay581/cookie-store",
   "devDependencies": {
-    "@open-wc/karma-esm": "^3.0.2",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -28,19 +27,15 @@
     "banner-cli": "^0.14.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
-    "esm": "^3.2.25",
     "husky": "^4.2.3",
-    "istanbul": "^0.4.5",
     "karma": "^5.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
     "mocha": "^8.1.1",
     "prettier": "^2.0.2",
     "pretty-quick": "^3.0.0",
-    "typescript": "^4.0.2",
-    "typescript-temporary-fork-for-jsdoc": "^3.6.0-insiders.20190802"
+    "typescript": "^4.0.2"
   },
   "files": [
     "dist"
@@ -55,8 +50,7 @@
     "prettier": "prettier --check 'src/**/*'",
     "preversion": "npm test",
     "banner": "banner-cli dist/index.js",
-    "build": "tsc",
-    "coveralls": "cat .coverage/lcov.info | coveralls"
+    "build": "tsc"
   },
   "dependencies": {}
 }
