--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "husky": "^4.2.3",
     "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.0",
     "karma-mocha": "^2.0.1",
     "mocha": "^8.1.1",
     "prettier": "^2.0.2",
