--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   "types": "index.d.ts",
   "repository": "markcellus/cookie-store",
   "devDependencies": {
-    "@types/chai": "^4.2.12",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "banner-cli": "^0.14.1",
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.14.0",
     "husky": "^4.2.3",
-    "karma": "^5.1.1",
+    "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.0",
     "karma-mocha": "^2.0.1",
     "mocha": "^8.1.1",
     "prettier": "^2.0.2",
-    "pretty-quick": "^3.0.0",
+    "pretty-quick": "^3.1.0",
     "typescript": "^4.0.2"
   },
   "files": [
