--- a/.github/workflows/buld.yml
+++ b/.github/workflows/buld.yml
@@ -3,10 +3,8 @@
 
 name: Node.js Package
 
-on:
-  release:
-    types: [created]
-
+on: [push, pull_request]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
