--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "cookie esm"
   ],
   "type": "module",
-  "module": "index.js",
-  "types": "index.d.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "markcellus/cookie-store",
   "devDependencies": {
     "@types/chai": "^4.2.14",
